tests/neg/parser-stability-15.scala
package x0
class x0 {
def x1 =
x2 match          // error
]                 // error
case x3[] => x0   // error // error
// error